<resources>
    <string name="app_name">NMedia</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_notes">Свежие записи</string>
    <string name="save_menu">save</string>
    <string name="clear">Clear</string>
    <string name="pick_photo_error">pick photo error</string>
    <string name="login_field_tint">Login</string>
    <string name="password_text_hint">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="to_authentication">Чтобы добавить пост, необходимо пройти аутентификацию</string>
    <string name="name_field_registration">Name</string>
    <string name="confirm_password_registration">Confirm password</string>
    <string name="sign_up_registration">Sign up</string>
    <string name="auth_notification_title">Выполнен вход в аккаунт</string>
    <string name="logout" />
    <string name="login" />
    <string name="register" />
    <string name="retry" />
</resources>